--- a/home.html
+++ b/home.html
@@ -22,14 +22,36 @@
         }
 
         div {
-            margin-left: 50px;
+            padding: 10px;
+        }
+
+        #first {
+            background-color: whitesmoke;
             height: 150px;
             width: 150px;
-            background-color: tan;
+        }
+
+        #second {
+            background-color: yellow;
+            height: 100px;
+            width: 100px;
+        }
+
+        #third {
+            background-color: aquamarine;
+            height: 50px;
+            width: 50px;
+        }
+
+        #fourth {
+            background-color: black;
+            height: 25px;
+            width: 25px;
         }
 
         body {
-            margin: 20px 5px 12px 9px;
+            margin: 20px;
+            padding: 20px;
             background-color: teal;
         }
     </style>
@@ -38,13 +60,16 @@
 </head>
 
 <body>
-    <header>
-        <h1>Hello!</h1>
-        <a href="http://google.com" target="_blank">Go to google.com</a>
-    </header>
+    <header></header>
 
     <main>
-        <address>123 Road Altavista</address>
+        <div id="first">
+            <div id="second">
+                <div id="third">
+                    <div id="fourth"></div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
