--- a/home.html
+++ b/home.html
@@ -6,6 +6,10 @@
     <title>Home - My first Website.</title>
     <link href="styles.css" rel="stylesheet" />
     <style>
+        * {
+            border: 2px dashed black;
+        }
+
         h1 {
             color: yellowgreen;
             font-style: italic;
@@ -23,6 +27,7 @@
 
         div {
             padding: 10px;
+            border: 2px solid black;
         }
 
         #first {
@@ -44,7 +49,7 @@
         }
 
         #fourth {
-            background-color: black;
+            background-color: coral;
             height: 25px;
             width: 25px;
         }
@@ -53,6 +58,10 @@
             margin: 20px;
             padding: 20px;
             background-color: teal;
+        }
+
+        span {
+            border-style: dotted;
         }
     </style>
     <meta charset="utf-8" />
@@ -66,7 +75,9 @@
         <div id="first">
             <div id="second">
                 <div id="third">
-                    <div id="fourth"></div>
+                    <div id="fourth">
+                        <span>hello</span>
+                    </div>
                 </div>
             </div>
         </div>
