--- a/codeChallenge/day6/flexBox.html
+++ b/codeChallenge/day6/flexBox.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <div id="outside">
-        <div class="inside smallBox"></div>
-        <div class="inside" id="longBox"></div>
-        <div class="inside smallBox"></div>
+    <div class="outside">
+        <div class="inside"></div>
+        <div class="inside longBox"></div>
+        <div class="inside"></div>
     </div>
 </body>
 
