--- a/home.html
+++ b/home.html
@@ -6,43 +6,32 @@
     <link href="styles.css" rel="stylesheet" />
     <style>
         body {
-            height: 100vh;
-            < !-- vh=view height // 100 = 100%-->
+            height: 1000vh;
             margin: 20px;
-            display: flex;
-            justify-content: space-between;
-            flex-direction: column;
-            flex-direction: row;
-            flex-direction: column-reverse;
-            flex-direction: row-reverse;
-            align-items: center;
-            flex-wrap: wrap;
-            flex-wrap: wrap-reverse;
-            flex-wrap: nowrap;
-            < !-- "flex-direction"main axis가 수직 cross axis가 수평으로 뒤바뀜-->< !--justify-content=>main axis // align-items => cross axis-->
         }
 
         div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 28px;
             color: white;
             width: 300px;
             height: 300px;
-            background-color: teal;
         }
 
-        #second {
-            background-color: thistle;
+        #green {
+            position: fixed;
+            background-color: teal;
+            opacity: 0.2;
+        }
+
+        #different {
+            background-color: wheat;
+            width: 350px;
         }
     </style>
 </head>
 
 <body>
-    <div>1</div>
-    <div id="second">2</div>
-    <div>3</div>
+    <div id="green"></div>
+    <div id="different"></div>
 </body>
 
 </html>
