--- a/home.html
+++ b/home.html
@@ -7,31 +7,36 @@
     <style>
         body {
             height: 1000vh;
-            margin: 20px;
+            margin: 50px;
         }
 
         div {
-            color: white;
             width: 300px;
             height: 300px;
-        }
-
-        #green {
-            position: fixed;
-            background-color: teal;
-            opacity: 0.2;
-        }
-
-        #different {
             background-color: wheat;
-            width: 350px;
+            position: relative;
+        }
+
+        .green {
+            background-color: teal;
+            height: 100px;
+            position: relative;
+            top: -10px;
+            left: -10px;
+
+            < !--absolute는 relative한 부모를 기준으로 옮김. 없으면 body를 기준-->position: absolute;
+            right: 0px;
+            bottom: 0px;
+
+            width: 100px;
         }
     </style>
 </head>
 
 <body>
-    <div id="green"></div>
-    <div id="different"></div>
+    <div>
+        <div class="green"></div>
+    </div>
 </body>
 
 </html>
