--- a/home.html
+++ b/home.html
@@ -17,26 +17,48 @@
             position: relative;
         }
 
-        .green {
-            background-color: teal;
-            height: 100px;
-            position: relative;
-            top: -10px;
-            left: -10px;
-
-            < !--absolute는 relative한 부모를 기준으로 옮김. 없으면 body를 기준-->position: absolute;
-            right: 0px;
-            bottom: 0px;
-
-            width: 100px;
+        div:first-child {
+            background-color: turquoise;
         }
+
+        span {
+            background-color: tomato;
+        }
+
+        span:nth-child(2),
+        span:nth-child(4) {
+            background-color: teal;
+        }
+
+        span:nth-child(even) {
+            background-color: teal;
+        }
+
+        span:nth-child(odd) {
+            background-color: violet;
+        }
+
+        span:nth-child(2n+1) {}
+
+        span:nth-child(2n) {}
+
+        span:nth-child(3n+1) {}
     </style>
 </head>
 
 <body>
-    <div>
-        <div class="green"></div>
-    </div>
+    <div></div>
+
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
 </body>
 
 </html>
