--- a/home.html
+++ b/home.html
@@ -29,7 +29,11 @@
             text-decoration: underline;
         }
 
-        < !--">"는 바로 밑 자식을 가리킴-->< !--"+"는 p다음에 오는 span을 가리킴-->
+        p~span {
+            text-decoration: underline;
+        }
+
+        < !--p바로 뒤에 span이 있지 않으므로 "+"는 적용안됨. 형제와 바로 뒤에 오는 형제의 관계 ">"는 부모와 바로 및 자식의 관계-->< !--"~"쓰면 형제와 형제 관계지만 꼭 바로 뒤에 올 필요 없음.-->
     </style>
 </head>
 
@@ -40,6 +44,7 @@
             Lorem sdlfjsdlflads dslfkj sdfsdfs sdfsdf sdfslld oerk wer
             dflsd dfkjsa erwdf sdfas. <span>inside</span>
         </p>
+        <address>hi</address>
         <span>hello</span>
     </div>
 
