--- a/home.html
+++ b/home.html
@@ -5,32 +5,29 @@
     <title>Home - My first Website.</title>
     <link href="styles.css" rel="stylesheet" />
     <style>
-        a {
-            color: white;
-            background-color: tomato;
-            text-decoration: none;
-            /*delete underline*/
-            padding: 3px 5px;
-            border-radius: 5px;
-            font-size: 50px;
+        img {
+            border: 5px solid black;
+            border-radius: 50%;
+            /*위 내용 쓰면 원이 됨*/
+            /* transform: rotateY(85deg) rotateX(20deg) rotateZ(10deg);
+            transform: translateX(300px); */
+            /*transformation은 다른 box element or 이미지에 영향을 끼치지 않음*/
 
-            transition: all 1s cubic-bezier(0.6, 0, 0.735, 0.045);
-            transition: color 1s cubic-bezier(0.6, 0, 0.735, 0.045),
-                border-radius 5s ease-in-out, background-color 10s ease-out;
+            transition: transform 2s ease-in-out;
         }
 
-        /*hover, active, focus, focus-within일때도 transition 가능*/
-        a:hover {
-            border-radius: 20px;
-            color: tomato;
-            background-color: wheat;
+        /*transition mdn에서 찾아보기*/
+
+        img:hover {
+            transform: rotateY(360deg) scale(0.5);
         }
     </style>
 </head>
 
 <body>
 
-    <a href="#">Go home</a>
+    <img src="day6-logo.jpg" />
+    <span>day6</span>
 
 </body>
 
