--- a/home.html
+++ b/home.html
@@ -5,19 +5,43 @@
     <title>Home - My first Website.</title>
     <link href="styles.css" rel="stylesheet" />
     <style>
+        body {
+            display: flex;
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+        }
+
         @keyframes coinFlip {
-            from {
+            0% {
                 transform: rotateY(0);
             }
 
-            to {
-                transform: rotateY(360deg);
+            25% {
+                transform: scale(2);
+                border-radius: 0px;
+            }
+
+            50% {
+                border-radius: 0px;
+                transform: rotateY(180deg) translateY(-100px);
+                border-color: tomato;
+            }
+
+            75% {
+                transform: scale(5);
+                border-radius: 20px;
+            }
+
+            100% {
+                transform: rotateY(0) translateY(0px);
             }
         }
 
         img {
             border: 5px solid black;
             border-radius: 50%;
+            width: 200px;
             animation: coinFlip 5s ease-in-out infinite;
         }
     </style>
@@ -26,7 +50,6 @@
 <body>
 
     <img src="day6-logo.jpg" />
-    <span>day6</span>
 
 </body>
 
