--- a/codeChallenge/day9/index.html
+++ b/codeChallenge/day9/index.html
@@ -9,20 +9,18 @@
 </head>
 
 <body>
-    <div class="outside">
-        <div class="dots">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-        </div>
+    <div class="dots box">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+    </div>
 
-        <div class="blocks">
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
-        </div>
+    <div class="blocks box">
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
     </div>
 </body>
 
